--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1> hello i am writing this on debian for deploying webserver from jenkins </h1>
 <h2> done if this is showing , vivek </h2>
+<h3> cant automate installing as it required password </h3>
